endpoint-sec/tests/ui/test_client_cannot_be_smuggled_out.stderr
error[E0521]: borrowed data escapes outside of closure
  --> tests/ui/test_client_cannot_be_smuggled_out.rs:13:9
   |
 6 |     Client::new(|client, _| {
   |                  ------
   |                  |
   |                  `client` is a reference that is only valid in the closure body
   |                  has type `&mut Client<'1>`
...
13 |         CLIENT_SMUGGLING.with(|r| *r.borrow_mut() = Some(smuggled_client));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         |
   |         `client` escapes the closure body here
   |         argument requires that `'1` must outlive `'static`
   |
   = note: requirement occurs because of the type `RefCell<Option<Client<'_>>>`, which makes the generic argument `Option<Client<'_>>` invariant
   = note: the struct `RefCell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
